
// TODO: Review style guidelines

syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "PeakSwc.RemoteableWebWindows";

package webwindow;

message SendMessageRequest {
    string id = 1;
    string message = 2;
}

message ShowMessageRequest {
    string id = 1;
    string title = 2;
    string body = 3;
}
message UrlMessageRequest {
    string id = 1;
    string url = 2;
}
message FileMessageRequest {
    string id = 1;
    string path = 2;
}
message IdMessageRequest {
    string id = 1;
}

message CreateWebWindowRequest {
  string id = 1;
  string title = 2;
  string htmlHostPath = 3;
}

message WebMessageResponse {
    string response = 1;
}

message IntMessageResponse {
    int32 response = 1;
}

message IntMessageRequest {
    string id = 1;
    int32 message = 2;
}

message PointMessageRequest {
    string id = 1;
    int32 x = 2;
    int32 y = 3;
}
message PointMessageResponse {
    int32 x = 1;
    int32 y = 2;
}

message SizeMessageResponse {
    int32 height = 1;
    int32 width = 2;
}

message SizeMessageRequest {
    string id = 1;
    int32 height = 2;
    int32 width = 3;
}

message FileReadRequest {
    string id = 1;
    string path = 2;
     bytes data = 3;
}
message FileReadResponse {
    string id = 1;
    string path = 2;   
}

message RectangleResponse {
    int32 x = 1;
    int32 y = 2;
    int32 width = 3;
    int32 height = 4;
}

message BoolResponse {
    bool response = 1; 
}

message StringResponse {
    string response = 1; 
}

message StringRequest {
    string id = 1;
    string request = 2; 
}

message BoolRequest {
    string id = 1;
    bool request = 2;
}

message UInt32Response {
    uint32 response = 1;
}

message MonitorResponse {
    message Instance
    {
        RectangleResponse monitorArea = 1;
        RectangleResponse workArea = 2;
    }
    repeated Instance instances = 1;
}

service RemoteWebWindow {
    rpc GetHeight(IdMessageRequest) returns (IntMessageResponse);
    rpc SetHeight(IntMessageRequest) returns (google.protobuf.Empty);

    rpc GetLeft(IdMessageRequest) returns (IntMessageResponse);
    rpc SetLeft(IntMessageRequest) returns (google.protobuf.Empty);

    rpc GetLocation(IdMessageRequest) returns (PointMessageResponse);
    rpc SetLocation(PointMessageRequest) returns (google.protobuf.Empty);

    rpc GetMonitors(IdMessageRequest) returns (MonitorResponse);
    
    rpc GetResizable(IdMessageRequest) returns (BoolResponse);
    rpc SetResizable(BoolRequest) returns (google.protobuf.Empty);

    rpc GetScreenDpi(IdMessageRequest) returns (UInt32Response);

     rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty); 
     rpc SetIconFile(SendMessageRequest) returns (google.protobuf.Empty); 

     rpc Show (IdMessageRequest) returns (google.protobuf.Empty);
     rpc ShowMessage(ShowMessageRequest) returns (google.protobuf.Empty);

     rpc GetSize(IdMessageRequest) returns (SizeMessageResponse);
     rpc SetSize(SizeMessageRequest) returns (google.protobuf.Empty);  

     rpc GetTitle(IdMessageRequest) returns (StringResponse);
     rpc SetTitle(StringRequest) returns (google.protobuf.Empty);

    rpc GetTop(IdMessageRequest) returns (IntMessageResponse);
    rpc SetTop(IntMessageRequest) returns (google.protobuf.Empty);

    rpc GetTopmost(IdMessageRequest) returns (BoolResponse);
    rpc SetTopmost(BoolRequest) returns (google.protobuf.Empty);

    rpc NavigateToLocalFile(FileMessageRequest) returns (google.protobuf.Empty);
    rpc NavigateToString(StringRequest) returns (google.protobuf.Empty);
    rpc NavigateToUrl(UrlMessageRequest) returns (google.protobuf.Empty);

    rpc WaitForExit(IdMessageRequest) returns (google.protobuf.Empty);

    rpc GetWidth(IdMessageRequest) returns (IntMessageResponse);
    rpc SetWidth(IntMessageRequest) returns (google.protobuf.Empty);

    rpc CreateWebWindow(CreateWebWindowRequest) returns (stream WebMessageResponse);
    rpc FileReader(stream FileReadRequest) returns (stream FileReadResponse);  
rpc TunnelGetHeightRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetHeightResponse(IntMessageResponse) returns (google.protobuf.Empty);
rpc TunnelSetHeightRequest(google.protobuf.Empty) returns(IntMessageRequest);
rpc TunnelSetHeightResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetLeftRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetLeftResponse(IntMessageResponse) returns (google.protobuf.Empty);
rpc TunnelSetLeftRequest(google.protobuf.Empty) returns(IntMessageRequest);
rpc TunnelSetLeftResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetLocationRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetLocationResponse(PointMessageResponse) returns (google.protobuf.Empty);
rpc TunnelSetLocationRequest(google.protobuf.Empty) returns(PointMessageRequest);
rpc TunnelSetLocationResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetMonitorsRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetMonitorsResponse(MonitorResponse) returns (google.protobuf.Empty);
rpc TunnelGetResizableRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetResizableResponse(BoolResponse) returns (google.protobuf.Empty);
rpc TunnelSetResizableRequest(google.protobuf.Empty) returns(BoolRequest);
rpc TunnelSetResizableResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetScreenDpiRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetScreenDpiResponse(UInt32Response) returns (google.protobuf.Empty);
rpc TunnelSendMessageRequest(google.protobuf.Empty) returns(SendMessageRequest);
rpc TunnelSendMessageResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelSetIconFileRequest(google.protobuf.Empty) returns(SendMessageRequest);
rpc TunnelSetIconFileResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelShowRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelShowResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelShowMessageRequest(google.protobuf.Empty) returns(ShowMessageRequest);
rpc TunnelShowMessageResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetSizeRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetSizeResponse(SizeMessageResponse) returns (google.protobuf.Empty);
rpc TunnelSetSizeRequest(google.protobuf.Empty) returns(SizeMessageRequest);
rpc TunnelSetSizeResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetTitleRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetTitleResponse(StringResponse) returns (google.protobuf.Empty);
rpc TunnelSetTitleRequest(google.protobuf.Empty) returns(StringRequest);
rpc TunnelSetTitleResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetTopRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetTopResponse(IntMessageResponse) returns (google.protobuf.Empty);
rpc TunnelSetTopRequest(google.protobuf.Empty) returns(IntMessageRequest);
rpc TunnelSetTopResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetTopmostRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetTopmostResponse(BoolResponse) returns (google.protobuf.Empty);
rpc TunnelSetTopmostRequest(google.protobuf.Empty) returns(BoolRequest);
rpc TunnelSetTopmostResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelNavigateToLocalFileRequest(google.protobuf.Empty) returns(FileMessageRequest);
rpc TunnelNavigateToLocalFileResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelNavigateToStringRequest(google.protobuf.Empty) returns(StringRequest);
rpc TunnelNavigateToStringResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelNavigateToUrlRequest(google.protobuf.Empty) returns(UrlMessageRequest);
rpc TunnelNavigateToUrlResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelWaitForExitRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelWaitForExitResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelGetWidthRequest(google.protobuf.Empty) returns(IdMessageRequest);
rpc TunnelGetWidthResponse(IntMessageResponse) returns (google.protobuf.Empty);
rpc TunnelSetWidthRequest(google.protobuf.Empty) returns(IntMessageRequest);
rpc TunnelSetWidthResponse(google.protobuf.Empty) returns (google.protobuf.Empty);
rpc TunnelCreateWebWindowRequest(google.protobuf.Empty) returns(CreateWebWindowRequest);
rpc TunnelCreateWebWindowResponse(WebMessageResponse) returns (google.protobuf.Empty);
rpc TunnelFileReaderRequest(google.protobuf.Empty) returns(FileReadRequest);
rpc TunnelFileReaderResponse(FileReadResponse) returns (google.protobuf.Empty);
}