syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "RemoteableWebWindowService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service WebWindow {
    rpc Show (google.protobuf.Empty) returns (google.protobuf.Empty);
}
